centos/nohup.out
  File "main.py", line 30
    elif:
        ^
SyntaxError: invalid syntax
